# spot-defy

./: .gitignore  Cargo.toml  LICENSE  README.md  ci.just  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: tmux.md
src/: app.rs  auth.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  message.rs  model.rs  secrets.rs  state.rs  update.rs  view.rs
src/api/: mock.rs  mod.rs  rspotify_client.rs
src/ipc/: mod.rs  now_playing_client.rs  server.rs
src/player/: librespot_player.rs  mock.rs  mod.rs
tests/: auth_tests.rs  config_tests.rs  update_tests.rs
